syntax = "proto3";
package v1;

message EventIDReq {
  string api = 1;
  string slug = 2;
}

message EventRes {
  string api = 1;
  string slug = 2;
  string type = 3;
  string name = 4;
  string description = 5;
  string place = 6;
  string scheduledAt = 7;
  string timezone = 8;
  bool isNew = 9;
}

message IndexEventsRes {
  string api = 1;
  repeated EventRes events = 2;
}

service Ticketer {
  rpc IndexEvents(EventIDReq) returns (IndexEventsRes) {}
}
